language/move-lang/tests/move_check/typing/borrow_divergent.exp
error: 

   ┌── tests/move_check/typing/borrow_divergent.move:4:13 ───
   │
 4 │            &break;
   │             ^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
   │

error: 

    ┌── tests/move_check/typing/borrow_divergent.move:11:12 ───
    │
 11 │         &{ return };
    │            ^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
    │

error: 

    ┌── tests/move_check/typing/borrow_divergent.move:18:10 ───
    │
 18 │         &(if (cond) return else return);
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
    │

